--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
         uses: SonarSource/sonarcloud-github-c-cpp@v1
       - name: Run build-wrapper
         run: |
-          build-wrapper-win-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }}rm -rf *.o    # Remove object files
+          build-wrapper-win-x86-64 --out-dir ${{ env.BUILD_WRAPPER_OUT_DIR }}<rm -rf *.o    # Remove object files
           rm -f myprog  # Remove executable
 
-          gcc -o myprog avg.c   # Build the project
+          gcc -o myprog avg.c   # Build the project>
 
       - name: Run sonar-scanner
         env:
